--- a/CSS/style.css
+++ b/CSS/style.css
@@ -42,3 +42,22 @@ h6 {
 h1 {
   font-size: 4rem;
 }
+
+#recipe-section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+#display-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 1rem 0rem;
+}
