--- a/CSS/style.css
+++ b/CSS/style.css
@@ -3,7 +3,7 @@ html {
 }
 
 body {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Georgia, serif;
 }
 
 body,
@@ -25,7 +25,6 @@ p {
 .ul__div-li,
 .clear,
 form,
-h1,
 footer {
   padding: 1rem 0rem;
 }
@@ -41,6 +40,7 @@ h6 {
 
 h1 {
   font-size: 4rem;
+  padding-top: 1rem;
 }
 
 #recipe-section {
@@ -49,10 +49,60 @@ h1 {
   align-items: center;
 }
 
+.header__form {
+  padding: 1rem 0rem;
+}
+
+.btn {
+  line-height: 1.5rem;
+  border-style: solid;
+  border-color: blue;
+  border-width: 1px;
+  background-color: transparent;
+  border-radius: 8px;
+  color: blue;
+  padding: 0.45rem 1.4rem;
+  text-transform: uppercase;
+  font-size: 1.2rem;
+  font-weight: bold;
+  transition-duration: 200ms;
+}
+
+.btn:hover {
+  cursor: pointer;
+  color: white;
+  background-color: blue;
+}
+
 #display-container {
-  display: flex;
-  flex-direction: column;
+  padding: 3rem 0rem;
+}
+
+.summary-container {
   align-items: center;
+  padding-bottom: 2rem;
+  width: 100%;
+}
+
+.summary-container__image {
+  width: 100%;
+  /* display: flex;
+  justify-content: center; */
+  padding: 0rem 2.5rem;
+}
+
+.summary-container__image > img {
+  width: 100%;
+}
+
+.summary-container__information,
+.ingredients {
+  padding: 0rem 2.5rem;
+}
+
+.single-recipe-title {
+  font-size: 2.5rem;
+  padding: 1rem 0rem 2rem 0rem;
 }
 
 .card {
@@ -60,4 +110,18 @@ h1 {
   flex-direction: column;
   align-items: center;
   padding: 1rem 0rem;
+}
+
+.recipe-summary__item,
+.nutrition__ul__item,
+.ingredient__ul__li {
+  line-height: 1.5;
+}
+
+.nutrition {
+  padding-top: 1rem;
+}
+
+.nutrition__ul {
+  display: flex;
 }
