--- a/CSS/style.css
+++ b/CSS/style.css
@@ -30,6 +30,11 @@ footer {
 }
 
 h1,
+h5 {
+  color: dimgray;
+}
+
+h1,
 h2,
 h3,
 h4,
@@ -50,17 +55,17 @@ h1 {
 }
 
 .header__form {
-  padding: 1rem 0rem;
+  padding: 2rem 0rem;
 }
 
 .btn {
   line-height: 1.5rem;
   border-style: solid;
-  border-color: blue;
+  border-color: darkslategray;
   border-width: 1px;
   background-color: transparent;
   border-radius: 8px;
-  color: blue;
+  color: darkslategray;
   padding: 0.45rem 1.4rem;
   text-transform: uppercase;
   font-size: 1.2rem;
@@ -71,7 +76,7 @@ h1 {
 .btn:hover {
   cursor: pointer;
   color: white;
-  background-color: blue;
+  background-color: darkslategray;
 }
 
 #display-container {
@@ -102,7 +107,8 @@ h1 {
 
 .single-recipe-title {
   font-size: 2.5rem;
-  padding: 1rem 0rem 2rem 0rem;
+  padding: 1rem 0rem 0.8rem 0rem;
+  text-align: center;
 }
 
 .card {
@@ -110,6 +116,18 @@ h1 {
   flex-direction: column;
   align-items: center;
   padding: 1rem 0rem;
+}
+
+.recipe-summary {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.recipe-summary__item {
+  width: 25%;
+  padding: 0.5rem 0rem;
+  text-align: center;
 }
 
 .recipe-summary__item,
@@ -122,6 +140,11 @@ h1 {
   padding-top: 1rem;
 }
 
+.nutrition__title {
+  padding-bottom: 0.5rem;
+  font-size: 1.5rem;
+}
+
 .nutrition__ul {
   display: flex;
   justify-content: space-between;
@@ -131,4 +154,19 @@ h1 {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.ingredients__title {
+  padding-bottom: 0.5rem;
+  font-size: 1.5rem;
+}
+
+.ingredients__ul {
+  border-top: solid 1px grey;
+}
+.ingredient__ul__li {
+  line-height: 1.5;
+  padding: 0.5rem;
+  border-bottom: solid 1px grey;
+  font-size: 1.2rem;
 }
