--- a/CSS/style.css
+++ b/CSS/style.css
@@ -154,6 +154,12 @@ h1 {
   display: flex;
   flex-direction: column;
   align-items: center;
+  background-color: teal;
+  width: 15%;
+  padding: 0.5rem;
+  color: white;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bold;
 }
 
 .ingredients__title {
