--- a/CSS/style.css
+++ b/CSS/style.css
@@ -46,6 +46,7 @@ h6 {
 h1 {
   font-size: 4rem;
   padding-top: 1rem;
+  text-align: center;
 }
 
 #recipe-section {
@@ -56,6 +57,27 @@ h1 {
 
 .header__form {
   padding: 2rem 0rem;
+  width: 90%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.header__form > div {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 1rem 0rem 2rem 0rem;
+}
+
+#food-input {
+  width: 60%;
+  height: 30px;
+}
+
+#recipe-button {
+  margin-left: 1rem;
 }
 
 .btn {
@@ -71,6 +93,7 @@ h1 {
   font-size: 1.2rem;
   font-weight: bold;
   transition-duration: 200ms;
+  width: fit-content;
 }
 
 .btn:hover {
