--- a/CSS/style.css
+++ b/CSS/style.css
@@ -269,6 +269,23 @@ h1 {
   .ingredients {
     width: 80%;
   }
+
+  .card {
+    width: 70%;
+  }
+
+  .card:after {
+    content: '';
+    display: block;
+    margin: 0 auto;
+    width: 80%;
+    padding-top: 2rem;
+    border-bottom: 1px solid grey;
+  }
+
+  .card__image {
+    width: 70%;
+  }
 }
 
 @media (min-width: 1200px) {
@@ -313,5 +330,19 @@ h1 {
 
   .ingredient__ul__li {
     font-size: 1.5rem;
+  }
+
+  .card {
+    width: 25%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+
+  .card-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: stretch;
   }
 }
