--- a/CSS/style.css
+++ b/CSS/style.css
@@ -347,10 +347,12 @@ h5 {
   }
 
   .card {
-    width: 25%;
+    width: 21%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    padding-left: 1rem;
+    padding-right: 1rem;
   }
 
   .card-container {
@@ -359,5 +361,10 @@ h5 {
     flex-direction: row;
     justify-content: center;
     align-items: stretch;
+    width: 90%;
+  }
+
+  .card__image {
+    width: 80%;
   }
 }
